[package]
name = "compositor-rust"
version = "0.1.0"
authors = ["papamitra <papamitra@gmail.com>"]

[dependencies]
wayland-server = "0.12"
wayland-sys = "0.12"
gl_generator = "0.6"
nix = "*"
libloading = "*"
lazy_static = "0.2"
error-chain = "0.11"
wayland-protocols = { version = "0.12", features = ["unstable_protocols", "server"] }
glium = "0.19"

[dependencies.xcb]
version = "0.8"
features = ["xlib_xcb"]

[build-dependencies]
gl_generator = "0.5"

